# promotional-price-recommender

./: README.md  pyproject.toml  requirements.txt
notebooks/: .gitkeep  causal_model.ipynb  econml_elasticity.ipynb
src/: revenue_optimizer.py
src/vod_causal/: __init__.py
src/vod_causal/data/: __init__.py  generator.py  oracle.py  schemas.py
src/vod_causal/evaluation/: __init__.py  metrics.py  policy_ranker.py  visualization.py
src/vod_causal/models/: __init__.py  base_learners.py  dml.py  xlearner.py
src/vod_causal/preprocessing/: __init__.py  preprocessing.py  propensity.py
tests/: __init__.py
